Updates the HTML documentation with the new definitions command. in the `dictionary` module.
Signed-off-by: Jim Teeuwen <jimteeuwen@gmail.com>

--- a/autimaat.html
+++ b/autimaat.html
@@ -22,7 +22,7 @@
    ingevoerd te worden tussen dubbele aanhalingstekens.
    Bijv.: <code>"Dit is 1 parameter"</code>.</p>
 
-   <p>Dit document is geschreven voor bot versie 0.19.<br />
+   <p>Dit document is geschreven voor bot versie 0.20.<br />
     Broncode voor deze bot is vrij beschikbaar via <a href="https://github.com/monkeybird/autimaat">deze link</a>.</p>
   </div>
 
@@ -75,6 +75,12 @@
     <li><span class="arg">&lt;term&gt;</span>: De term waarvoor de definitie gevraagd word.</li>
    </ul>
    <p class="dsc">Geeft de definitie van de opgegeven term.</p>
+  </div>
+
+  <div>
+   <span class="cmd">!definities</span>
+   <p class="dsc">Geeft de gebruiker, in een PM venster, een lijst van alle
+    bekende definities.</p>
   </div>
 
   <div>
