Rewires the dictionary commands to allow any term to have multiple definitions. They are all presented to the user when said user requests the definition for the term. Each entry in a separate PRIVMSG. The user can now also remove individual sub-definitions, or the entire term from the dictionary.
Adding new definitions to an existing term is now possible
and will only yield an error message if the definition is,
word-for-word, already in the dictionary for that specific
term.

This also fixes the HTML documentation to reflect the
changes and bumps the minor version number.

Signed-off-by: Jim Teeuwen <jimteeuwen@gmail.com>

--- a/autimaat.html
+++ b/autimaat.html
@@ -22,7 +22,7 @@
    ingevoerd te worden tussen dubbele aanhalingstekens.
    Bijv.: <code>"Dit is 1 parameter"</code>.</p>
 
-   <p>Dit document is geschreven voor bot versie 0.20.<br />
+   <p>Dit document is geschreven voor bot versie 0.21.<br />
     Broncode voor deze bot is vrij beschikbaar via <a href="https://github.com/monkeybird/autimaat">deze link</a>.</p>
   </div>
 
@@ -97,11 +97,22 @@
 
   <div>
    <span class="cmd"><em>*</em> !ondefinieer</span>
+   <span class="arg">&lt;term&gt;</span><br />
+
+   <span class="cmd"><em>*</em> !ondefinieer</span>
    <span class="arg">&lt;term&gt;</span>
+   <span class="arg">&lt;index&gt;</span>
    <ul>
     <li><span class="arg">&lt;term&gt;</span>: De term die verwijdert dient te worden.</li>
+    <li><span class="arg">&lt;index&gt;</span>: De index van de sub-definitie die verwijdert dient te worden.
+	 Sommige definities hebben meerdere regels (sub-definities). Deze index laat de
+	 gebruiker alleen die specifieke sub-definitie verwijderen. Indien deze index
+	 niet opgegeven wordt, dan word de volledige definitie verwijderd. Een index begint
+	 bij 1 en dient niet hoger te zijn dan het aantal sub-definities voor de gegeven
+	 term.</li>
    </ul>
-   <p class="dsc">Verwijdert een bestaande <em>!watis</em> definitie.</p>
+   <p class="dsc">Verwijdert een bestaande <em>!watis</em> definitie of een
+    deel ervan.</p>
   </div>
 
   <!-- Snooze module -->
