Adds a few more silly commands, updates the HTML docs to reflect the additions and bumps the minor version number.
Signed-off-by: Jim Teeuwen <jimteeuwen@gmail.com>

--- a/data/autimaat.html
+++ b/data/autimaat.html
@@ -22,7 +22,7 @@
    ingevoerd te worden tussen dubbele aanhalingstekens.
    Bijv.: <code>"Dit is 1 parameter"</code>.</p>
 
-   <p>Dit document is geschreven voor bot versie 0.21.<br />
+   <p>Dit document is geschreven voor bot versie 0.22.<br />
     Broncode voor deze bot is vrij beschikbaar via <a href="https://github.com/monkeybird/autimaat">deze link</a>.</p>
   </div>
 
@@ -210,6 +210,39 @@
   </div>
 
   <!-- Misc module -->
+  <div>
+   <span class="cmd">!aai</span><br />
+
+   <span class="cmd">!aai</span>
+   <span class="arg">&lt;wie&gt;</span>
+   <ul>
+    <li><span class="arg">&lt;wie&gt;</span>: [optioneel] Naam van de ontvanger.</li>
+   </ul>
+   <p class="dsc">Geef jezelf of iemand anders een aai.</p>
+  </div>
+
+  <div>
+   <span class="cmd">!knuffel</span><br />
+
+   <span class="cmd">!knuffel</span>
+   <span class="arg">&lt;wie&gt;</span>
+   <ul>
+    <li><span class="arg">&lt;wie&gt;</span>: [optioneel] Naam van de ontvanger.</li>
+   </ul>
+   <p class="dsc">Geef jezelf of iemand anders een knuffel.</p>
+  </div>
+
+  <div>
+   <span class="cmd">!peuk</span><br />
+
+   <span class="cmd">!aai</span>
+   <span class="arg">&lt;wie&gt;</span>
+   <ul>
+    <li><span class="arg">&lt;wie&gt;</span>: [optioneel] Naam van de ontvanger.</li>
+   </ul>
+   <p class="dsc">Geef jezelf of iemand anders iets te roken.</p>
+  </div>
+
   <div>
    <span class="cmd">!bier</span><br />
 
