Adds a few more beverage options to the `misc` module. Adds respective string translations for these new commands. Fixes the HTML docs to include the new commands. Bumps the minor version number.
Signed-off-by: Jim Teeuwen <jimteeuwen@gmail.com>

--- a/data/autimaat.html
+++ b/data/autimaat.html
@@ -22,7 +22,7 @@
    ingevoerd te worden tussen dubbele aanhalingstekens.
    Bijv.: <code>"Dit is 1 parameter"</code>.</p>
 
-   <p>Dit document is geschreven voor bot versie 0.22.<br />
+   <p>Dit document is geschreven voor bot versie 0.23.<br />
     Broncode voor deze bot is vrij beschikbaar via <a href="https://github.com/monkeybird/autimaat">deze link</a>.</p>
   </div>
 
@@ -263,6 +263,28 @@
     <li><span class="arg">&lt;wie&gt;</span>: [optioneel] Naam van de ontvanger.</li>
    </ul>
    <p class="dsc">Geef jezelf of iemand anders een wijntje.</p>
+  </div>
+  
+  <div>
+   <span class="cmd">!port</span><br />
+
+   <span class="cmd">!port</span>
+   <span class="arg">&lt;wie&gt;</span>
+   <ul>
+    <li><span class="arg">&lt;wie&gt;</span>: [optioneel] Naam van de ontvanger.</li>
+   </ul>
+   <p class="dsc">Geef jezelf of iemand anders een portje.</p>
+  </div>
+
+  <div>
+   <span class="cmd">!whiskey</span><br />
+
+   <span class="cmd">!whiskey</span>
+   <span class="arg">&lt;wie&gt;</span>
+   <ul>
+    <li><span class="arg">&lt;wie&gt;</span>: [optioneel] Naam van de ontvanger.</li>
+   </ul>
+   <p class="dsc">Geef jezelf of iemand anders een whiskey.</p>
   </div>
   
   <div>
