Adds the new `nick` command to the HTML documentation.

--- a/data/autimaat.html
+++ b/data/autimaat.html
@@ -22,7 +22,7 @@
    ingevoerd te worden tussen dubbele aanhalingstekens.
    Bijv.: <code>"Dit is 1 parameter"</code>.</p>
 
-   <p>Dit document is geschreven voor bot versie 0.23.<br />
+   <p>Dit document is geschreven voor bot versie 0.24.<br />
     Broncode voor deze bot is vrij beschikbaar via <a href="https://github.com/monkeybird/autimaat">deze link</a>.</p>
   </div>
 
@@ -362,7 +362,21 @@
    <p class="dsc">Log bestanden worden niet langer dan 2 weken bewaard.
     Na deze tijd, worden ze automatisch door de bot verwijderd.</p>
   </div>
-  
+
+  <div>
+   <span class="cmd"><em>*</em> !nick</span>
+   <span class="arg">&lt;naam&gt;</span><br />
+   
+   <span class="cmd"><em>*</em> !nick</span>
+   <span class="arg">&lt;naam&gt;</span>
+   <span class="arg">&lt;wachtwoord&gt;</span>
+   <ul>
+    <li><span class="arg">&lt;naam&gt;</span>: De nieuwe naam die de bot aan moet nemen.</li>
+    <li><span class="arg">&lt;wachtwoord&gt;</span>: [optioneel] Het nickserv wachtwoord voor de gekozen naam.</li>
+   </ul>
+   <p class="dsc">Instrueer de bot om de gegeven nickname aan te nemen,</p>
+  </div>
+
   <div>
    <span class="cmd"><em>*</em> !join</span>
    <span class="arg">&lt;kanaal&gt;</span><br />
